src/main/java/io/github/cengauver/cobol_plugin_intellij_idea/Cobol.bnf
{
    parserClass="io.github.cengauver.cobol_plugin_intellij_idea.parser.CobolParser"
    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Cobol"
    psiImplClassSuffix="Impl"
    psiPackage="io.github.cengauver.cobol_plugin_intellij_idea.psi.impl"

    elementTypeHolderClass="io.github.cengauver.cobol_plugin_intellij_idea.psi.CobolTypes"
    elementTypeClass="io.github.cengauver.cobol_plugin_intellij_idea.psi.CobolElementType"
    tokenTypeClass="io.github.cengauver.cobol_plugin_intellij_idea.psi.CobolTokenType"


    tokens = [
    IDENTIFICATION_KEYWORD = "IDENTIFICATION"
    DIVISION_KEYWORD = "DIVISION"
    PROGRAM_ID_KEYWORD = "PROGRAM-ID"
    DATA_KEYWORD = "DATA"
    WORKING_STORAGE_KEYWORD = "WORKING-STORAGE"
    SECTION_KEYWORD = "SECTION"
    PICTURE_KEYWORD = "PICTURE"
    PIC_KEYWORD = "PIC"
    IS_KEYWORD = "IS"
    NOT_KEYWORD = "NOT"
    VALUE_KEYWORD = "VALUE"
    PROCEDURE_KEYWORD = "PROCEDURE"
    PERFORM_KEYWORD = "PERFORM"
    VARYING_KEYWORD = "VARYING"
    FROM_KEYWORD = "FROM"
    BY_KEYWORD = "BY"
    UNTIL_KEYWORD = "UNTIL"
    DISPLAY_KEYWORD = "DISPLAY"
    STOP_KEYWORD = "STOP"
    RUN_KEYWORD = "RUN"

    LINE_NUMBER ="regexp:^[0-9]{2}"
    NUMBER_LITERAL = "regexp:[0-9]+"

    PLUS = "+"
    MINUS = "-"
    EQUALS = "="
    GREATER_THAN = ">"
    LESS_THAN = "<"
    GREATER_EQUAL = ">="
    LESS_EQUAL = "<="
    PERIOD = "."
    LPAREN = "("
    RPAREN = ")"
    SINGLE_QUOTE = "'"
    WHITE_SPACE="regexp:[ \n\r\t\f]+"
    IDENTIFIER = "regexp:[a-zA-Z0-9][a-zA-Z0-9\-]*"
    currency = "regexp:~[0-9ABCDPRSVXZa-z\*\+\-\/\,\.\;\(\)\=\'\"\ \n]"
    picchar = "regexp:([ABEGPSVXZabegpsvxz90\+\-\*\$]|CR|DB)"

    punctuation = "regexp:[\/\,\.\:]"

    ]
}

cobol_source ::= identification_division data_division? procedure_division?

identification_division ::=   LINE_NUMBER IDENTIFICATION_KEYWORD DIVISION_KEYWORD PERIOD
                              LINE_NUMBER PROGRAM_ID_KEYWORD PERIOD? IDENTIFIER PERIOD?
data_division ::=   LINE_NUMBER DATA_KEYWORD DIVISION_KEYWORD PERIOD
                    data_content

procedure_division ::= LINE_NUMBER PROCEDURE_KEYWORD DIVISION_KEYWORD PERIOD sentence* paragraph*

data_content ::= (LINE_NUMBER WORKING_STORAGE_KEYWORD SECTION_KEYWORD PERIOD (data_entry)* )?

data_entry ::= LINE_NUMBER NUMBER_LITERAL data_name (picture_clause | data_value_clause)*

data_name ::= IDENTIFIER

picture_clause ::= (PIC_KEYWORD | PICTURE_KEYWORD) IS_KEYWORD? picture_string

data_value_clause ::= VALUE_KEYWORD IS_KEYWORD? NUMBER_LITERAL PERIOD? //Maybe add string literals too later

picture_string ::= pic_type LPAREN NUMBER_LITERAL RPAREN

pic_type ::= NUMBER_LITERAL | IDENTIFIER

paragraph ::= LINE_NUMBER paragraph_name PERIOD (sentence)*

paragraph_name ::= IDENTIFIER

sentence ::= (statement)+ PERIOD

statement ::= (perform_varying_statement|display_statement|stop_statement)
perform_varying_statement ::= LINE_NUMBER PERFORM_KEYWORD IDENTIFIER VARYING_KEYWORD IDENTIFIER FROM_KEYWORD NUMBER_LITERAL BY_KEYWORD NUMBER_LITERAL UNTIL_KEYWORD condition {pin=2}
display_statement ::= LINE_NUMBER DISPLAY_KEYWORD (IDENTIFIER | NUMBER_LITERAL | SINGLE_QUOTE)+ {pin=2}
stop_statement ::= LINE_NUMBER STOP_KEYWORD (RUN_KEYWORD|IDENTIFIER|NUMBER_LITERAL) {pin=2}
condition ::= arithmetic_exp relational_operator arithmetic_exp
arithmetic_exp ::= (IDENTIFIER | NUMBER_LITERAL) ((PLUS|MINUS) (IDENTIFIER | NUMBER_LITERAL))*
relational_operator ::= (IS_KEYWORD | NOT_KEYWORD | GREATER_EQUAL | LESS_EQUAL | GREATER_THAN | LESS_THAN | EQUALS)
